# BasicIterativeStatistics

./: .bumpversion.cfg  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pullrequestcheck.yml  python-publish.yml
docs/: covariance.md  mean.md  quantile.md  sobol.md  variance.md
experimental_design/: experiment.py
iterative_stats/: abstract_iterative_statistics.py  iterative_covariance.py  iterative_dotproduct.py  iterative_extrema.py  iterative_mean.py  iterative_moments.py  iterative_quantile.py  iterative_threshold.py  iterative_variance.py
iterative_stats/experimental_design/: experiment.py
iterative_stats/sensitivity/: __init__.py  abstract_sensitivity.py  sensitivity_jansen.py  sensitivity_martinez.py  sensitivity_saltelli.py
iterative_stats/sobol/: abstract_sobol.py  sobol_jansen.py  sobol_martinez.py
iterative_stats/utils/: dot_prod.py  logger.py
joss/: paper.bib  paper.md
src/: abstract_iterative_algorithm.py  abstract_iterative_statistcs.py  iterative_covariance.py  iterative_extrema.py  iterative_mean.py  iterative_variance.py
tests/: __init__.py  test_IterativeCovariance.py  test_IterativeMean.py  test_IterativeVariance.py  test_abstractIterativeStatistics.py  test_iterativeExtrema.py
tests/mock/: ishigami.py  uniform_3d.py
tests/mock/sensitivity/: abstract_check.py  check_ishigami.py  check_jansen.py  check_martinez.py  check_saltelli.py
tests/unit/: test_IterativeCovariance.py  test_IterativeDotProduct.py  test_IterativeExtrema.py  test_IterativeMean.py  test_IterativeMoments.py  test_IterativeQuantile.py  test_IterativeThreshold.py  test_IterativeVariance.py  test_abstractIterativeAlgorithm.py  test_abstractIterativeStatistics.py  test_iterative_mean.py  test_iterative_moments.py
tests/unit/experimental_design/: test_experiments.py
tests/unit/sensitivity/: template_testsensitivity.py  test_IterativeSensitivityJansen.py  test_IterativeSensitivityMartinez.py  test_IterativeSensitivitySaltelli.py
tests/unit/sobol/: test_IterativeSobolJansen.py  test_IterativeSobolMartinez.py
